<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalificarActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/icon_oponente1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/cuc" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/icon_oponente2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/modelo" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txtOponente"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/nombre_calificar"
                        android:text="@string/txtNombre"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/nombre_calificar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="nombre"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        android:text="@string/txtNombre2" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBienNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBien" />

                    <RadioButton
                        android:id="@+id/radioMalNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMal" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/apellido_calificar"
                        android:text="@string/txtApellido"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/apellido_calificar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="apellido"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        android:text="@string/txtApellido2" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBienApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBien" />

                    <RadioButton
                        android:id="@+id/radioMalApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMal" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/ciudad_calificar"
                        android:text="@string/txtCiudad"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/ciudad_calificar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="ciudad"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        android:text="@string/txtCiudad2" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBienCiudad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBien" />

                    <RadioButton
                        android:id="@+id/radioMalCiudad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMal" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/fruta_calificar"
                        android:text="@string/txtFruta"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/fruta_calificar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="fruta"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        android:text="@string/txtFruta2" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBienFruta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBien" />

                    <RadioButton
                        android:id="@+id/radioMalFruta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMal" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/animal_calificar"
                        android:text="@string/txtAnimal"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/animal_calificar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="animal"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        android:text="@string/txtAnimal2" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBienAnimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBien" />

                    <RadioButton
                        android:id="@+id/radioMalAnimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMal" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/cosa_calificar"
                        android:text="@string/txtCosa"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/cosa_calificar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="cosa"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        android:text="@string/txtCosa2" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBienCosa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBien" />

                    <RadioButton
                        android:id="@+id/radioMalCosa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMal" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="100dp"
                android:backgroundTint="@color/colorButtons"
                android:foregroundTint="#FFFFFF"
                android:onClick="terminarCalificacion"
                android:text="@string/txtBtnTerminar"
                android:textColor="#FFFFFF" />


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>